--- a/part2chapter2/app/src/main/res/layout/activity_main.xml
+++ b/part2chapter2/app/src/main/res/layout/activity_main.xml
@@ -10,150 +10,149 @@
         android:id="@+id/numberPicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="100dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/addNumber"
-        app:layout_constraintTop_toBottomOf="@+id/numberPicker"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/resetButton"
-        app:layout_constraintHorizontal_chainStyle="packed"
         android:layout_marginTop="10dp"
         android:layout_marginRight="16dp"
-        />
+        android:text="@string/addNumber"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/resetButton"
+        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
+
     <Button
         android:id="@+id/resetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/addNumber"
-        app:layout_constraintTop_toBottomOf="@+id/numberPicker"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/addButton"
-        app:layout_constraintTop_toTopOf="@id/addButton"
-        />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/numberPicker"
+        app:layout_constraintTop_toTopOf="@id/addButton" />
 
     <LinearLayout
-        app:layout_constraintTop_toBottomOf="@id/addButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:gravity="center"
-        >
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addButton">
 
         <TextView
             android:id="@+id/textView1"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:text="1"
-            android:background="@drawable/circle_blue"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            />
+            android:background="@drawable/circle_blue"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
         <TextView
             android:id="@+id/textView2"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:background="@drawable/circle_blue"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:text="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:background="@drawable/circle_blue"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:visibility="visible"
 
             />
+
         <TextView
             android:id="@+id/textView3"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:background="@drawable/circle_blue"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:text="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:background="@drawable/circle_blue"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:visibility="visible"
 
             />
+
         <TextView
             android:id="@+id/textView4"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:background="@drawable/circle_blue"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:text="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:background="@drawable/circle_blue"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:visibility="visible"
 
             />
+
         <TextView
             android:id="@+id/textView5"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:background="@drawable/circle_blue"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:text="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            />
+            android:background="@drawable/circle_blue"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/textView6"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:background="@drawable/circle_blue"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:text="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            />
+            android:background="@drawable/circle_blue"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
 
         <!-- visibility는 해당 내용을 없앤다 -->
-<!-- tools의 visibility를 통해서 해당 미리보기에서는 보여달라고 할 수 있다.-->
-<!-- 실제로는 보이지 않지만 tools를 통해서 미리보기에서는 보이도록 한다 -->
+        <!-- tools의 visibility를 통해서 해당 미리보기에서는 보여달라고 할 수 있다.-->
+        <!-- 실제로는 보이지 않지만 tools를 통해서 미리보기에서는 보이도록 한다 -->
     </LinearLayout>
+
     <Button
         android:id="@+id/runButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:text="초기화"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
-        <!-- 가로를 쫙 넓히기 위해서 넓이는 0으로 줫음 -->
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+    <!-- 가로를 쫙 넓히기 위해서 넓이는 0으로 줫음 -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
